--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body{
 .showcase{
     grid-column: 1 / 5;
     grid-row: 1 / 3;
-    background-image: url(https://c67.pcloud.com/dpZYtLzC8Z9VtayQZVY4iZZmMlqA7ZNVZZhgLZXZDnLt8RQ2nGFSSOhhznXGqjhBUUiX/th-13525738531-1152x768.jpg);
+    background-image: url(https://my.pcloud.com/publink/show?code=XZ2oza7Zg64sCukIMNkNLaJEjvbB5fJU9qvX);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
